force-app/main/default/objects/Portal_button_approval_submitter__mdt/Portal_button_approval_submitter__mdt.object-meta.xml
<CustomObject>
    <description>Determines who can submit a record for approval</description>
    <label>Portal button approval submitter</label>
    <pluralLabel>Portal button approval submitters</pluralLabel>
</CustomObject>