force-app/main/default/objects/Portal_button_approval_submitter__mdt/fields/Group_name__c.field-meta.xml
<CustomField>
    <fullName>Group_name__c</fullName>
    <description>If type is &apos;Group&apos;, supply name of the public group here.</description>
    <inlineHelpText>If type is &apos;Group&apos;, supply name of the public group here.</inlineHelpText>
    <label>Group name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>