force-app/main/default/objects/Portal_button_approval_submitter__mdt/fields/Role_name__c.field-meta.xml
<CustomField>
    <fullName>Role_name__c</fullName>
    <description>If type is &apos;Role&apos;, supply name of the role here.</description>
    <inlineHelpText>If type is &apos;Role&apos;, supply name of the role here.</inlineHelpText>
    <label>Role name</label>
    <length>180</length>
    <type>Text</type>
</CustomField>