force-app/main/default/objects/Portal_button_approval_submitter__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Determines who can submit record for submission.</description>
    <inlineHelpText>Determines who can submit record for submission.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record owner</fullName>
                <default>true</default>
                <label>Record owner</label>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Public group</fullName>
            </value>
            <value>
                <fullName>Record creator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>